src/test/ui/issues/issue-50264-inner-deref-trait/result-as_deref_mut.stderr
error[E0599]: no method named `as_deref_mut` found for enum `std::result::Result<{integer}, _>` in the current scope
  --> $DIR/result-as_deref_mut.rs:2:31
   |
LL |     let _result = &mut Ok(42).as_deref_mut();
   |                               ^^^^^^^^^^^^ method not found in `std::result::Result<{integer}, _>`
   |
   = note: the method `as_deref_mut` exists but the following trait bounds were not satisfied:
           `{integer}: DerefMut`
           `<{integer} as Deref>::Target = _`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
